# luci-app-modemdata-huawei

./: .gitignore  LICENSE  README.md
src/huawei-login/: CMakeLists.txt  api.c  api.h  http.c  http.h  main.c  scram.c  scram.h  session.c  session.h  utils.c  utils.h  xml.c  xml.h
